changed to work with generic exec jar and tested on ubuntu